--- a/project7index.html
+++ b/project7index.html
@@ -100,6 +100,73 @@
             </div>
         </div>
     </div>
+    <div class="our_time_table">
+        <span class="heading_1">our weekly GYM schedules</span>
+        <span class="heading_2">Workout Timetable</span>
+        <table class="time_table">
+            <tr class="table_head">
+                <th>TIME</th>
+                <th>MON</th>
+                <th>TUE</th>
+                <th>WED</th>
+                <th>THU</th>
+                <th>FRI</th>
+                <th>SAT</th>
+            </tr>
+            <tr class="table_info_1">
+                <td class="time_sch">7:00 AM</td>
+                <td><span>Cardio <br> 7:00 to 9:00 AM</span> </td>
+                <td><span>Power fitness<br> 7:00 to 9:00 AM</span></td>
+                <td></td>
+                <td></td>
+                <td><span>Yoga session<br> 7:00 to 9:00 AM</span></td>
+                <td></td>
+            </tr>
+            <tr class="table_info_2">
+                <td class="time_sch">9:00 AM</td>
+                <td></td>
+                <td></td>
+                <td><span>Power fitness<br> 7:00 to 9:00 AM</span></td>
+                <td><span>Yoga session<br> 7:00 to 9:00 AM</span></td>
+                <td></td>
+                <td><span>Cardio <br> 7:00 to 9:00 AM</span></td>
+            </tr>
+            <tr class="table_info_3">
+                <td class="time_sch">9:00 AM</td>
+                <td></td>
+                <td><span>Power fitness<br> 7:00 to 9:00 AM</span></td>
+                <td><span>Yoga session<br> 7:00 to 9:00 AM</span></td>
+                <td></td>
+                <td><span>Cardio <br> 7:00 to 9:00 AM</span></td>
+                <td></td>
+            </tr>
+            <tr class="table_info_4">
+                <td class="time_sch">9:00 AM</td>
+                <td><span>Power fitness<br> 7:00 to 9:00 AM</span></td>
+                <td><span>Yoga session<br> 7:00 to 9:00 AM</span></td>
+                <td></td>
+                <td><span>Aerobic<br> 7:00 to 9:00 AM</span></td>
+                <td></td>
+                <td><span>Cardio <br> 7:00 to 9:00 AM</span></td>
+            </tr>
+        </table>
+    </div>
+    <div class="footer">
+        <div class="form">
+            <h1>Feel free to ask anything</h1>
+            <input type="text" class="input_m_1" placeholder="Name">
+            <input type="email" name=""  class="input_m_2" id="" placeholder="E-mail">
+            <textarea name="" id="" cols="30" rows="10" class="input_m_3" placeholder="Message"></textarea>
+            <button class="send_btn"><a href="#">Send Message</a></button>
+        </div>
+        <div class="map">
+            <h1>Where you can find us!</h1>
+            <p>340/29 floor no. 2 Model town jalandhar,punjab</p>
+            <img src="images/P29631429.jpg" alt="">
+            <span class="phone_no">Ph- 7467658314</span>
+            <span class="email">E-mail- xyzgfg@gmail.com</span>
+        </div>
+    </div>
     
 </body>
 </head>
